k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: scalable-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: backend
