k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: scalable-app
spec:
  ports:
    - port: 5432
  selector:
    app: db
  clusterIP: None
