k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: scalable-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: frontend
